--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 72%">JQuery/JavaScript
+                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 72%">JQuery/JavaScript janskdfksajdfkjks
                             </div>
                         </div>
                         </div>
