--- a/portfolio.html
+++ b/portfolio.html
@@ -3,32 +3,36 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="Author" content="devjain.com"> -->
         <link rel="stylesheet" href="./css/bootstrap.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="./css/custom.css">
+        <title>Dev Jain</title>
+        <link rel="shortcut icon" href="img/symbol.jpg">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <div class="main">
         <body>
             <!--Header-->
-            <div id="header" align="center">
+            <section id="header" align="center">
             <header>
-             <img src="img/symbol3.jpg" alt="Dev" class="img-circle" id="headerimage">
-            <ul>
-                  <li id="headerli"><a href="#news">Contact</a></li>
-                  <li id="headerli"><a href="#contact">Projects</a></li>
-                  <li id="headerli"><a href="#about">About</a></li>
-                  <li id="headerli"><a class="active" href="#home">Home</a></li>
-            </ul>
+            <img src="img/symbol3.jpg" alt="Dev" class="img-circle" id="headerimage">
+            <div class="topnav" id="myTopnav">  
+                  <a href="#contact">Contact</a>
+                  <a href="#project">Projects</a>
+                  <a href="#about">About</a>
+                  <a class="active" href="#header">Home</a>
+                  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
             </header>
-                <h3 id="name">DEV JAIN</h3>
+                <div class="name">DEV JAIN</div>
                 <div id="detail"><span style="color:#e55102;">Front End Developer</span> & UI Designer, devoted to functional <br> programming and information architecture.</div>
                 <span id="subdetail">  " Web Developer - Designer " </span>
-            </div>
+            </section>
             <!--HeaderEnd-->
             <!--About-->
-            <div class="About" style="height:450px;">
+            <section id="about" style="height:450px;">
                 <div class ="row" id="buttons">
                     <div class="col-xs-3 col-md-3" ></div>
                     <div class="col-xs-3 col-md-3" ><a id="aboutbutton1" onclick="aboutMe()" style="color:#e55102">ABOUT</a></div>
@@ -55,45 +59,45 @@
                      <div class="col-md-1 col-xs-1"></div>
                       <div class="col-md-5 col-xs-5">
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">C/C++
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">C/C++
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">JAVA
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">JAVA
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">HTML/CSS
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">HTML/CSS
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">Bootstrap
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">Bootstrap
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 72%">JQuery/JavaScript janskdfksajdfkjks
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 72%">JQuery/JavaScript
                             </div>
                         </div>
                         </div>
                          <div class="col-md-5 col-xs-5">
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 75%">AngularJS
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 75%">AngularJS
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 68%">Adobe-Photoshop
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 68%">Adobe-Photoshop
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 30%">Android
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 30%">Android
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">Teaching
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">Teaching
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Learning
+                            <div class="progress-bar progress-bar-striped progress-bar-warning active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Learning
                             </div>
                         </div>
                         </div>
@@ -102,49 +106,42 @@
                     </div>
                 </div>
                 <!--aboutSectionEnd-->
-            </div>
+            </section>
             <!--AboutEnd-->
             <!--Project-->
-            <div class="project">
-                <h2 style="color:white;text-align:center;font-weight:bold;padding:5% 0 3% 0;font-size:1.5em;text-decoration:underline;text-decoration-color:#6873fb; ">PROJECTS</h2>
+            <section id="project">
+                <div id="projectHead"><span style="border-bottom: 4px solid #e55102;">PROJECTS</span></div>
                 <div class="row">
-                    <div class="col-xs-6 col-md-6">
-                        <img src="img/APJ1.jpg" alt="APJ First Pic" class="img-thumbnail" id="project_image">
+                    <div class="col-xs-3 col-md-3">
+                        <img src="img/APJ.jpg" alt="APJ First Pic" class="img-responsive" id="project_image1">
                     </div>
-                    <div class="col-xs-6 col-md-6">
-                        <img src="img/portpro.jpg" alt="Portfolio" class="img-thumbnail" id="project_image">
-                    </div>
+                    
+                    <div class="col-xs-7 col-md-7">
+                        <img src="img/site.jpg" alt="Portfolio" class="img-responsive" id="project_image2">
+                    </div>   
                 </div>
-            </div>
+            </section>>
             <!--Contact-->
-            <div class="Contact">
+            <section id="contact">
                 <div class="row">
-                    <p style="font-size: 2.5em; padding:2% 0 1% 0 ; ">Around The Web</p>
-                    <div class="col-md-6 col-xs-6">
-                        <h3><span class="glyphicon glyphicon-envelope" ></span> <span>dev141097@gmail.com</span></h3>
+                    <div class="col-md-3 col-xs-12 contmail1">
+                        <a class="contactmail"><i class="fa fa-envelope-o" ></i> <span>dev141097@gmail.com</span></a>
                     </div>
-                    <div class="col-md-6 col-xs-6">
-                        <h3><span class="glyphicon glyphicon-phone-alt"></span> <span>+91-8878352724</span></h3>
-                    </div>
-                   </div>
-                    <br>
-                    <div class="row">
+                   <div class="col-md-6 col-xs-12">
                     <div class="social">
-                        <div class="col-md-3 col-xs-3">
                             <a href="https://www.facebook.com/dev.jain.395"><i class="fa fa-facebook-square" id="social_icon"></i></a>
-                        </div>
-                        <div class="col-md-3 col-xs-3">
-                            <a herf="#"><i class = "fa fa-instagram" id="social_icon" ></i></a>
-                        </div>
-                        <div class="col-md-3 col-xs-3">
-                            <a herf="#"><i class = "fa fa-quora" id="social_icon" ></i></a>
-                        </div>
-                        <div class="col-md-3 col-xs-3">
-                            <a herf="#"><i class = "fa fa-google-plus" id="social_icon" ></i></a>
-                        </div>
+                            <a href="https://www.linkedin.com/in/dev-jain-6917ab141/"><i class = "fa fa-linkedin" id="social_icon" ></i></a>
+                            <a href="https://www.instagram.com/_devjain/?hl=en"><i class = "fa fa-instagram" id="social_icon" ></i></a>
+                            <a href="https://twitter.com/dextrousdev"><i class = "fa fa-twitter" id="social_icon" ></i></a>
+                            <a href="https://github.com/devjain14"><i class = "fa fa-github" id="social_icon" ></i></a>
+                            <a href="https://plus.google.com/115262492954351386933"><i class = "fa fa-google-plus" id="social_icon" style="height: 42px; width: 42px; padding-top: -20px;" ></i></a>
                     </div>
-                </div>
+                    </div>
+                    <div class="col-md-3 col-xs-12 contmail2">
+                        <a class="contactmail"><i class="fa fa-phone"></i> <span>+91-8878352724</span></a>
+                    </div>
             </div>
+            </section>>
             <!--Contactend-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="js/main.js"></script>            
